--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["CORS", "PSR-7", "PSR-15"],
     "license": "MIT",
     "require": {
-        "http-interop/http-middleware": "dev-master",
+        "http-interop/http-middleware": "^0.5.0",
         "neomerx/cors-psr7": "^1.0",
         "php": ">=7.1"
     },
